Fix animation and add script

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>pullquery</title>
         <link rel="stylesheet" href="style.css">
+        <script defer src="script.js"></script>
     </head>
     <body>
         <img src="https://avatars.githubusercontent.com/u/108810259?v=4" alt="pullquery">
